--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\Umesh\\.virtualenvs\\umbrella-DudpRJIO\\Scripts\\python.exe"
+  "python.pythonPath": "c:\\Users\\Umesh\\OneDrive\\Desktop\\umbrella\\venv\\Scripts\\python.exe"
 }
